# ExploringPico

./: .gitignore  CMakeLists.txt  build.sh
src/: main.cpp
